--- a/templates/login.html
+++ b/templates/login.html
@@ -32,6 +32,16 @@ Login
       </div>
     </nav>
 
+    {% with messages = get_flashed_messages() %}
+        {% if messages %}
+            {% for message in messages%}
+                <div class = "alert alert-warning alert-dismissible" role-"alert">
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    {{message}}
+                </div>
+            {% endfor %}
+        {% endif %}
+    {% endwith %}
     <div class="container">
 
       <form class="form-signin" method="POST" action="/login">
