--- a/templates/signup.html
+++ b/templates/signup.html
@@ -10,6 +10,8 @@ Sign Up
 <link rel="stylesheet" href="{{url_for('.static', filename='signin.css')}}">
 {% endblock %}
 
+
+
 {% block content %}
 
     <nav class="navbar navbar-inverse navbar-fixed-top">
@@ -25,12 +27,23 @@ Sign Up
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
+            <li class="active"><a href="#">Home</a></li>
             <li><a href="{{ url_for('login') }}">Login</a></li>
             <li><a href="{{ url_for('signup') }}">Sign Up</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
     </nav>
+	{% with messages = get_flashed_messages() %}
+		{% if messages %}
+			{% for message in messages%}
+				<div class = "alert alert-warning alert-dismissible" role-"alert">
+					<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+					{{message}}
+				</div>
+			{% endfor %}
+		{% endif %}
+	{% endwith %}
 
 <div class="container">
 
