--- a/templates/post.html
+++ b/templates/post.html
@@ -90,7 +90,7 @@
     {% with messages = get_flashed_messages() %}
     {% if messages %}
       {% for message in messages%}
-        <div class = "alert alert-warning alert-dismissible" role-"alert">
+        <div class = "alert alert-warning alert-dismissible" role="alert">
           <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
           {{message}}
         </div>
