--- a/templates/userspage.html
+++ b/templates/userspage.html
@@ -48,7 +48,7 @@ User's Page
 
       <div class = "courseSB"></div>
         <a href="{{ url_for('coursesearch') }}">
-          <button type="Add Course">Add Course</button>
+          <input type="submit" value="Add Course"></input>
         </a>
       </div>
     </div>
