--- a/templates/coursesearch.html
+++ b/templates/coursesearch.html
@@ -1,5 +1,7 @@
 {% extends "bootstrap/base.html" %}
 
+{% from "_render_field.html" import render_field %}
+
 {% block title %}
 Dashboard
 {% endblock %}
@@ -43,9 +45,10 @@ Dashboard
 				<a type="Subject"><u><b>Subject</b></u></a>
 				<br>
 				<br>
-				    <form action="/coursesearch/add" method="POST">
+				    <form action="{{ url_for('coursesearch') }}" method="POST">
         				{{ form.csrf_token }}
-        				{{ form.options }}
+
+        				{{ render_field(form.options) }}
         				<ul>
             				{% for error in form.options.errors %}
             				<li style="color:red;">{{ error }}</li>
