--- a/templates/course.html
+++ b/templates/course.html
@@ -68,6 +68,6 @@
 </div>
 </div>
 <br>
-<center><button type="button" class="btn btn-success">Home</button></center>
+<center><a href={{ url_for('userspage') }} class="btn btn-success">Home</a></center>
 </body>
 </html>
