--- a/templates/coursesearch.html
+++ b/templates/coursesearch.html
@@ -39,11 +39,10 @@ Dashboard
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 		<div class = "User-courses">
 		<div class = "form">
-			<form name = "User-Form">
 				<a type="Subject"><u><b>Subject</b></u></a>
 				<br>
 				<br>
-				    <form action="/coursesearch/add" method="POST">
+				    <form action="/coursesearch" method="POST">
         				{{ form.csrf_token }}
         				{{ form.options }}
         				<ul>
@@ -53,7 +52,7 @@ Dashboard
         				</ul>
                 <input type="submit" value="Add Course"></input>
    					</form>
-			</form>
+
 		</div>
 		</div>
 	</body>
