--- a/templates/course.html
+++ b/templates/course.html
@@ -69,7 +69,7 @@
 </div>
 <br>
 <center><a href={{ url_for('userspage') }} class="btn btn-success">Home</a>
-<a href={{ url_for('post') }} class="btn btn-success">Create Post</a>
+<a href={{ url_for('post', course_id=course.id) }} class="btn btn-success">Create Post</a>
 </center>
 </body>
 </html>
