--- a/templates/usercenter.html
+++ b/templates/usercenter.html
@@ -1,34 +1,75 @@
-{% import "bootstrap/wtf.html" as wtf %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Detail</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+   <meta charset="UTF-8">
+   <title>Usercenter</title>
+ <meta name="viewport" content="width=device-width, initial-scale=1">
+ <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+ <link rel="stylesheet" type="text/css">
+ <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+ <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+ <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+ <style>
+   .user-info{
+       margin-top: 50px;
+   }
+  .user-info p{
+      text-align: center;
+      height: auto;
+      font-size: 28px;
+  }
+  .header{
+      margin-top: 20px;
+  }
+  .selection  {
+     width: 300px;
+     height: auto;
+     margin:0 auto;
+   }
+  .selection li {
+      display: block;
+       float: left;
+      width: 100px;
+      text-align: center;
+      }
+  .selection a {
+       width: 100px;
+      text-align: center;
+       display: block;
+       float: left;
+       text-decoration: none;
+       color: #5c96ff;
+  }
+  .selection a:hover{
+       color: #75ffb5;
+  }
+  .list-group-item p {
+       margin: 0;
+  }
+    </style>
 </head>
-<body>
-</head>
-
-    <nav class="navbar navbar-expand-sm bg-success navbar-dark">
-        <a class="navbar-brand" href="#">CourseHub</a>
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('logout') }}">Sign out</a>
-                </li>
-             </ul>
-    </nav>
-{% block main %}
-  <h3 class="title"><span class="glyphicon glyphicon-user" aria-hidden="true"></span>My information</h3>
-<ul class="nav_ul">
-    <li role="presentation" class="active"><a href="{{ url_for('usercenter',username=user.username,tag= 1) }}">My Post({{ user.post.count() }})</a> </li>
-    <li role="presentation"><a href="{{ url_for('usercenter',username=user.username,tag = 2) }}" class="current_nav">My Comment ({{ user.comment.count() }})</a> </li>
+   <nav class="navbar navbar-expand-sm bg-success navbar-dark">
+       <a class="navbar-brand" href="#">CourseHub</a>
+           <ul class="navbar-nav ml-auto">
+               <li class="nav-item">
+                   <a class="nav-link" href="{{ url_for('logout') }}">Sign out</a>
+               </li>
+            </ul>
+   </nav>
+   <div class="user-info">
+   <p >Username: {{ user.username }}
+   <br>Email: {{ user.email }}
+   </p>
+   </div>
+<div class="header">
+    <ul class="selection">
+        <li> <a href="{{ url_for('usercenter',username=user.username,tag='post') }}">
+          Post({{ user.post.count() }})</a> </li>
+        <li><a href=" {{ url_for('usercenter',username=user.username,tag='comment')}}">
+           Comment({{ user.comment.count() }})</a> </li>
 </ul>
-
-{% endblock %}
+</div>
+<br> <hr>
+{% block user %}{% endblock %}
 </body>
 </html>
