--- a/templates/usercenter1.html
+++ b/templates/usercenter1.html
@@ -1,13 +1,14 @@
 {% extends 'usercenter.html' %}
-
 {% block user %}
-    <ul>
-    {% for foo in user.comment %}
-                <li class="list-group-item" >
-
-                    <span class="badge">{{ foo.comment_time }}</span>
-                    <p class="abstract">{{ foo.detail }}</p>
-                </li>
-        {% endfor %}
-    </ul>
-{% endblock %}
+    <p style="font-size: 22px; text-align: center;">{{ user.username }}'s Posts</p>
+    <div class="all-post"  style="margin:0 auto;width:900px;height:auto;">
+              <ul class="note-list" >
+                {% for post in user.post %}
+                    <li class="list-group-item">
+                   <p >Title:  <a href="{{ url_for('detail',post_id=post.id) }}"> {{ post.title }}</a></p>
+                        <span class="time">{{ post.post_time }}</span>
+                    </li>
+                {% endfor %}
+            </ul>
+     </div>
+ {% endblock %}
