--- a/templates/usercenter2.html
+++ b/templates/usercenter2.html
@@ -1,20 +1,17 @@
 {% extends 'usercenter.html' %}
+{%block user%}
+        <p class="users-comment"
+           style="font-size: 22px; text-align: center;">{{ user.username }}'s Comments</p>
 
-{% block user %}
-              <ul class="note-list" style="padding-left: 0px;">
-                {% for post in user.post %}
-                    <li class="list-group-item">
-                        <span class="glyphicon glyphicon-leaf" aria-hidden="true"></span>
-                        <a href="{{ url_for('detail',post_id=p.id) }}">{{ p.title }}</a>
-                        <span class="badge">{{ p.post_time }}</span>
-                        <br>
-                        <p>{{ p.detail }}</p>
-
-                    </li>
-                {% endfor %}
-            </ul>
-
-        </div>
-    </div>
-
+ <div class="all-comment" style="margin:0 auto;width:900px;height:auto;">
+     <ul>
+    {% for comments in user.comment %}
+                <li class="list-group-item"  >
+                    <p >Title:  <a href="{{ url_for('detail',post_id=comments.post.id) }}"> {{ comments.post.title }}</a></p>
+                     <p class="detail">{{ comments.detail }}</p>
+                    <span class="time">{{ comments.comment_time }}</span>
+                </li>
+        {% endfor %}
+    </ul>
+     </div>
 {% endblock %}
