Edited login fail message

--- a/templates/login.html
+++ b/templates/login.html
@@ -122,6 +122,13 @@
 </style>
 </head>
 <body>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+      
         <div class = "Login-page">
 	<div class = "form">
 	<img src="/static/icon.png" class="avatar">
@@ -131,7 +138,7 @@
             {% if messages %}
                 {% for message in messages%}
                     <div class = "alert alert-warning" role-"alert">
-                        {{message}}
+                        <center><font color="red"> {{message}} </font></center>
                     </div>
                 {% endfor %}
             {% endif %}
