added logo, edited navi bar

--- a/templates/detail.html
+++ b/templates/detail.html
@@ -65,7 +65,7 @@ h4{
     </div>
     
     <button class="btn-send">Submit</button> &nbsp
-    <a href='#' class="btn btn-success">Cancel</a>
+    <a href='#' class="btn-send">Back</a>
     
     </form>
     <ul class="comment-list">
