--- a/templates/login.html
+++ b/templates/login.html
@@ -105,8 +105,8 @@
 		color: green;
 	}
 	.info{
-		width: 1250px;
-		height: 135px;
+		width: 320px;
+		height: 85px;
 		font-family: "Arial", sans-serif;
 		background: #141416;
 		color: #21B00C;
@@ -122,8 +122,7 @@
 </style>
 </head>
 <body>
-	<br>
-	<br>
+	<img src="/static/chlogo.png" style="height:120px;width:320px;">
 	<br>
 	<br>
 	<br>
@@ -163,13 +162,7 @@
 	
 	<div class = "info">
 		<center><h1><i>Ask & Answer</i></h1><center>
-		<center><p><font color="FFFFFF"><font size="3.5">
-	CourseHub is a forum-based 
-	platform that allows Hunter College students to interact with their classmates. 
-        Join your course's "classroom" where you can connect with fellow classmates 
-	to post and answer questions. 
-        Never feel lost again! Community driven, by Hunter students, for Hunter students.
-        </font>
+	
 	</font>
         </p>
 	</center>
