--- a/templates/index.html
+++ b/templates/index.html
@@ -54,6 +54,10 @@
 </nav>
 
 <div class="container">
+<br>
+<img src="/static/chlogo.png" style="width:375px;height:200px;">
+<br>
+
 <h1>Welcome to CourseHub</h1>
   <div class="row">
   <div class="col-sm">
