--- a/templates/signup.html
+++ b/templates/signup.html
@@ -27,9 +27,8 @@ Sign Up
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="{{ url_for('login') }}">Login</a></li>
-            <li><a href="{{ url_for('signup') }}">Sign Up</a></li>
+            <li class="active"><a href="{{ url_for('index') }}">Home</a></li>
+            <li><a href="{{ url_for('login') }}">Sign in</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
