Added Button For User Center
Line 56 on userspage needs to be fixed with proper variables.

--- a/templates/userspage.html
+++ b/templates/userspage.html
@@ -53,6 +53,9 @@ User's Page
         <a  href="{{ url_for('removecourse') }}">
           <input name="remove" type="submit" value="Remove Course"></input>
         </a>
+        <a  href="{{ url_for('usercenter') }}">
+          <input name="usercenter" type="submit" value="Your Posts"></input>
+        </a>
       </div>
     </div>
 
