--- a/static/userspage.css
+++ b/static/userspage.css
@@ -84,3 +84,26 @@ input[name="remove"]:hover {
     background: #ffd1dc;
     color: #000;
   }  
+
+
+input[name="usercenter"] {
+  -webkit-appearance: none;
+  text-transform: uppercase;
+  outline: 0;
+  background: #77dd77;
+  width: 26.75%;
+  border: 0;
+  padding: 15px;
+  color: #FFFFFF;
+  font-size: 14px;
+  cursor: pointer;
+  border-radius: 20px;
+  position:absolute;
+  top: 25%;
+  left: 60%;
+}
+
+input[name="add"]:hover {
+    background: #ffd1dc;
+    color: #000;
+  }
