fixed line 56 on userspage

--- a/templates/userspage.html
+++ b/templates/userspage.html
@@ -53,7 +53,7 @@ User's Page
         <a  href="{{ url_for('removecourse') }}">
           <input name="remove" type="submit" value="Remove Course"></input>
         </a>
-        <a  href="{{ url_for('usercenter') }}">
+        <a href="{{url_for('usercenter',username = user.username, tag='post')}}">
           <input name="usercenter" type="submit" value="Your Posts"></input>
         </a>
       </div>
