--- a/templates/usercenter2.html
+++ b/templates/usercenter2.html
@@ -9,7 +9,7 @@
                 <li class="list-group-item"  >
                     <p >Title:  <a href="{{ url_for('detail',post_id=comments.post.id) }}"> {{ comments.post.title }}</a></p>
                      <p class="detail">{{ comments.detail }}</p>
-                    <span class="time">{{ comments.comment_time }}</span>
+                    <span class="time">{{ comments.comment_time.strftime('%Y-%m-%d %H:%M:%S') }}</span>
                 </li>
         {% endfor %}
     </ul>
